--- a/d3_front/index.html
+++ b/d3_front/index.html
@@ -23,6 +23,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/testWindows/main.js"></script>
+    <script type="module" src="/auth/main.js"></script>
   </body>
 </html>
