--- a/d3_front/index.html
+++ b/d3_front/index.html
@@ -18,6 +18,7 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+        background-color: #202225;
       }
     </style>
   </head>
